deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paris-roubaix
  labels:
    app.kubernetes.io/name: paris-roubaix
    app.kubernetes.io/part-of: paris-roubaix
