deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paris-roubaix
  labels:
    app.kubernetes.io/name: paris-roubaix
    app.kubernetes.io/part-of: paris-roubaix
spec:
  selector:
    app.kubernetes.io/name: paris-roubaix
    app.kubernetes.io/part-of: paris-roubaix
  ports:
    - name: http
      port: 80
      targetPort: http
