deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paris-roubaix
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - paris-roubaix.lol
        - www.paris-roubaix.lol
      secretName: paris-roubaix-live-tls
  rules:
    - host: paris-roubaix.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paris-roubaix
                port:
                  number: 80
    - host: www.paris-roubaix.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paris-roubaix
                port:
                  number: 80
